--- a/app/src/main/res/drawable/shape_host_info_bg.xml
+++ b/app/src/main/res/drawable/shape_host_info_bg.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="17dp" />
-    <solid android:color="#242b35" />
+    <solid android:color="@color/live_icon_color" />
 
 </shape>
