--- a/app/src/main/res/drawable/shape_live_display_populartity_bg.xml
+++ b/app/src/main/res/drawable/shape_live_display_populartity_bg.xml
@@ -2,8 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval"
     android:useLevel="false">
-    <solid android:color="#242b35" />
-    <stroke
-        android:width="1dp"
-        android:color="#242b35" />
+    <solid android:color="@color/live_icon_color" />
 </shape>
