--- a/app/src/main/res/layout/item_priavet_chat_right.xml
+++ b/app/src/main/res/layout/item_priavet_chat_right.xml
@@ -10,15 +10,14 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="7dp"
         android:layout_toLeftOf="@id/iv_avatar"
-        android:background="@drawable/item_priavet_chat_right"
+        android:background="@drawable/shape_private_right"
         android:textColor="#ffffff"
-        android:textSize="13sp" />
+        android:textSize="15sp" />
 
     <ImageView
         android:id="@+id/iv_avatar"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="9dp" />
+        android:layout_alignParentTop="true" />
 </RelativeLayout>
