--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -3,9 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#f4f4f4"
     android:orientation="vertical"
     tools:showIn="@layout/dialog_live_house_chat">
+
+    <!--<android.support.v7.widget.RecyclerView-->
+    <!--android:id="@+id/recycler_chat_layout"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content" />-->
+
+    <HorizontalScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:overScrollMode="never"
+        android:scrollbars="none">
+
+        <LinearLayout
+            android:id="@+id/container_hot_word"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingBottom="3dp" />
+    </HorizontalScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,8 +64,8 @@
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
                 android:singleLine="true"
-                android:textColorHint="#cececf"
                 android:textColor="@color/text_view"
+                android:textColorHint="#cececf"
                 android:textSize="12sp" />
 
             <Button
@@ -73,7 +91,8 @@
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="238dp" />
+            android:layout_height="238dp"
+            android:background="#f4f4f4" />
 
         <LinearLayout
             android:layout_width="match_parent"
