--- a/app/src/main/res/layout/item_anchor_followed.xml
+++ b/app/src/main/res/layout/item_anchor_followed.xml
@@ -34,7 +34,7 @@
             <ImageView
                 android:id="@+id/iv_level_icon"
                 android:layout_width="wrap_content"
-                android:layout_height="14dp" />
+                android:layout_height="@dimen/anchor_lever_height" />
         </LinearLayout>
 
         <TextView
