--- a/app/src/main/res/layout/item_audience_contribuate.xml
+++ b/app/src/main/res/layout/item_audience_contribuate.xml
@@ -14,9 +14,9 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:layout_marginLeft="15dp"
+            android:textColor="@color/black"
             android:textSize="15sp"
-            android:textStyle="bold"
-            android:textColor="@color/black" />
+            android:textStyle="bold" />
     </RelativeLayout>
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
@@ -36,16 +36,17 @@
         android:singleLine="true"
         android:textColor="@color/black"
         android:textSize="12sp"
-        android:textStyle="bold"  />
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/iv_level_icon"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/anchor_lever_height"
         android:layout_below="@id/tv_name"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"
-        android:layout_toRightOf="@id/iv_avatar" />
+        android:layout_toRightOf="@id/iv_avatar"
+        android:scaleType="fitStart" />
 
     <TextView
         android:id="@+id/tv_amount"
@@ -56,6 +57,6 @@
         android:layout_marginRight="10dp"
         android:singleLine="true"
         android:textColor="@color/tran_black2"
-        android:textSize="10sp"/>
+        android:textSize="10sp" />
 
 </RelativeLayout>
