--- a/app/src/main/res/layout/item_manager.xml
+++ b/app/src/main/res/layout/item_manager.xml
@@ -18,8 +18,8 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:orientation="vertical">
 
             <LinearLayout
@@ -76,8 +76,7 @@
             android:id="@+id/iv_car"
             android:layout_width="97dp"
             android:layout_height="45dp"
-            android:layout_gravity="center_vertical"
-            android:visibility="gone" />
+            android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
