--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -76,8 +76,7 @@
             android:id="@+id/iv_car"
             android:layout_width="97dp"
             android:layout_height="45dp"
-            android:layout_gravity="center_vertical"
-            android:visibility="gone" />
+            android:layout_gravity="center_vertical" />
 
     </LinearLayout>
 
