--- a/app/src/main/res/layout/dialog_private_chat_list.xml
+++ b/app/src/main/res/layout/dialog_private_chat_list.xml
@@ -12,7 +12,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="357dp"
+        android:layout_height="300dp"
         android:background="@drawable/bg_dialog_private_chat_list"
         android:orientation="vertical">
 
@@ -22,7 +22,8 @@
             android:gravity="center"
             android:padding="9.5dp"
             android:text="私信列表"
-            android:textColor="@color/text_color_private_chat" />
+            android:textColor="@color/text_color_private_chat"
+            android:textSize="15sp" />
 
         <View
             android:layout_width="match_parent"
