--- a/app/src/main/res/layout/item_private_chat_list.xml
+++ b/app/src/main/res/layout/item_private_chat_list.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ll_item_private_chat"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
+    android:layout_height="64dp"
     android:gravity="center_vertical"
     android:orientation="horizontal">
 
@@ -12,39 +13,71 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="12dp" />
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="64dp"
+            android:layout_height="64dp">
 
-        <TextView
-            android:id="@+id/tv_nick"
+            <ImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="41.5dp"
+                android:layout_height="41.5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
+                android:background="@drawable/shape_private_chat_time"
+                android:gravity="center"
+                android:textColor="#ffffff"
+                android:textSize="9sp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+        </android.support.constraint.ConstraintLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="13dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="6.5dp"
             android:layout_weight="1"
-            android:textColor="@color/text_color_private_chat"
-            android:textSize="14sp" />
+            android:gravity="center_vertical"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_nick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_color_private_chat"
+                android:textSize="15sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:textColor="#a7a7a7"
+                android:textSize="14sp" />
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_time"
+            android:id="@+id/tv_time_stamp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5.5dp"
-            android:background="@drawable/shape_private_chat_time"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:textSize="12sp" />
+            android:layout_marginRight="@dimen/padding_12"
+            android:textColor="#70000000"
+            android:textSize="11sp" />
     </LinearLayout>
 
     <TextView
         android:id="@+id/tv_delete"
-        android:layout_width="65dp"
+        android:layout_width="102dp"
         android:layout_height="match_parent"
         android:background="@color/text_red"
         android:gravity="center"
         android:text="删除"
-        android:textColor="#FFFFFFFF"
-        android:textSize="14sp" />
+        android:textColor="#fefefe"
+        android:textSize="15sp" />
 </LinearLayout>
