--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -648,19 +648,19 @@
                     <ImageButton
                         android:id="@+id/btn_chat"
                         android:layout_width="77dp"
-                        android:layout_height="32dp"
+                        android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="12dp"
+                        android:layout_marginLeft="5dp"
                         android:background="@null"
                         android:src="@drawable/ic_live_display_talk" />
 
 
                     <ImageButton
                         android:id="@+id/btn_chat_private"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginLeft="7dp"
+                        android:layout_marginLeft="11dp"
                         android:layout_toRightOf="@id/btn_chat"
                         android:background="@null"
                         android:scaleType="centerCrop"
@@ -679,21 +679,21 @@
 
                     <ImageButton
                         android:id="@+id/btn_close"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_alignParentRight="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="12dp"
+                        android:layout_marginRight="7dp"
                         android:background="@null"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_live_close" />
 
                     <ImageButton
                         android:id="@+id/btn_share"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="6dp"
+                        android:layout_marginRight="2.5dp"
                         android:layout_toLeftOf="@id/btn_close"
                         android:background="@null"
                         android:scaleType="centerCrop"
@@ -701,30 +701,44 @@
 
                     <ImageButton
                         android:id="@+id/btn_more"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="6dp"
+                        android:layout_marginRight="2.5dp"
                         android:layout_toLeftOf="@id/btn_share"
                         android:background="@null"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_live_more" />
 
-                    <ImageButton
-                        android:id="@+id/btn_free_gift"
-                        android:layout_width="31dp"
-                        android:layout_height="33dp"
+                    <RelativeLayout
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="6dp"
-                        android:layout_toLeftOf="@id/btn_more"
-                        android:background="@null"
-                        android:scaleType="centerCrop"
-                        android:visibility="visible" />
+                        android:layout_marginRight="2.5dp"
+                        android:layout_toLeftOf="@id/btn_more">
+
+                        <ImageButton
+                            android:id="@+id/btn_free_gift"
+                            android:layout_width="35dp"
+                            android:layout_height="35dp"
+                            android:background="@null"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/ic_live_free_gift"
+                            android:visibility="visible" />
+
+                        <ImageView
+                            android:id="@+id/iv_free_gift"
+                            android:layout_width="25.5dp"
+                            android:layout_height="10dp"
+                            android:layout_alignParentBottom="true"
+                            android:layout_centerHorizontal="true" />
+                    </RelativeLayout>
+
 
                     <ImageButton
                         android:id="@+id/btn_send_gift"
-                        android:layout_width="32dp"
-                        android:layout_height="32dp"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
                         android:layout_centerInParent="true"
                         android:layout_centerVertical="true"
                         android:background="@null"
