--- a/app/src/main/res/layout/item_priavet_chat_right.xml
+++ b/app/src/main/res/layout/item_priavet_chat_right.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_marginRight="7dp"
         android:layout_toLeftOf="@id/iv_avatar"
+        android:text="fdsf"
         android:background="@drawable/shape_private_right"
         android:textColor="#ffffff"
         android:textSize="15sp" />
@@ -18,6 +19,6 @@
         android:id="@+id/iv_avatar"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
