--- a/app/src/main/res/layout/item_private_chat_list.xml
+++ b/app/src/main/res/layout/item_private_chat_list.xml
@@ -55,6 +55,7 @@
                 android:textSize="15sp" />
 
             <TextView
+                android:id="@+id/tv_last_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
