--- a/app/src/main/res/layout/item_private_chat_list.xml
+++ b/app/src/main/res/layout/item_private_chat_list.xml
@@ -37,6 +37,16 @@
                 android:textSize="9sp"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_anchor_tips"
+                android:layout_width="27.5dp"
+                android:layout_height="13dp"
+                android:src="@drawable/ic_anchor_private_chat"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@id/iv_avatar"
+                app:layout_constraintLeft_toLeftOf="@id/iv_avatar"
+                app:layout_constraintRight_toRightOf="@id/iv_avatar" />
         </android.support.constraint.ConstraintLayout>
 
         <LinearLayout
