--- a/app/src/main/res/layout/item_priavet_chat_right.xml
+++ b/app/src/main/res/layout/item_priavet_chat_right.xml
@@ -4,16 +4,30 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_content"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="7dp"
         android:layout_toLeftOf="@id/iv_avatar"
-        android:text="fdsf"
-        android:background="@drawable/shape_private_right"
-        android:textColor="#ffffff"
-        android:textSize="15sp" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_warn"
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_warn_private_chat"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_private_right"
+            android:textColor="#ffffff"
+            android:textSize="15sp" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_avatar"
