--- a/app/src/main/res/layout/item_priavet_chat_left.xml
+++ b/app/src/main/res/layout/item_priavet_chat_left.xml
@@ -1,38 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
-    <RelativeLayout
-        android:id="@+id/rl_private_chat_left"
-        android:layout_width="40dp"
-        android:layout_height="40dp">
-
-        <ImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentTop="true" />
-
-        <ImageView
-            android:id="@+id/iv_anchor_private"
-            android:layout_width="27.5dp"
-            android:layout_height="13dp"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/ic_anchor_private_chat"
-            android:visibility="gone" />
-    </RelativeLayout>
-
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/tv_content"
+        android:id="@+id/tv_time_private_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="7dp"
-        android:layout_toRightOf="@id/rl_private_chat_left"
-        android:background="@drawable/shape_private_left"
-        android:textColor="@color/text_color_private_chat"
-        android:textSize="15sp" />
+        android:layout_marginBottom="6.5dp"
+        android:background="@drawable/shape_time_private_chat"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        android:visibility="gone" />
 
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:id="@+id/rl_private_chat_left"
+            android:layout_width="40dp"
+            android:layout_height="40dp">
+
+            <ImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentTop="true" />
+
+            <ImageView
+                android:id="@+id/iv_anchor_private"
+                android:layout_width="27.5dp"
+                android:layout_height="13dp"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:src="@drawable/ic_anchor_private_chat"
+                android:visibility="gone" />
+        </RelativeLayout>
+
+
+        <TextView
+            android:id="@+id/tv_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
+            android:layout_toRightOf="@id/rl_private_chat_left"
+            android:background="@drawable/shape_private_left"
+            android:textColor="@color/text_color_private_chat"
+            android:textSize="15sp" />
+
+    </RelativeLayout>
+</LinearLayout>
