--- a/app/src/main/res/layout/item_priavet_chat_right.xml
+++ b/app/src/main/res/layout/item_priavet_chat_right.xml
@@ -1,38 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/tv_time_private_chat"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="7dp"
-        android:layout_toLeftOf="@id/iv_avatar"
+        android:layout_marginBottom="6.5dp"
+        android:background="@drawable/shape_time_private_chat"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        android:visibility="gone" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/iv_warn"
-            android:layout_width="19dp"
-            android:layout_height="19dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_warn_private_chat"
-            android:visibility="gone" />
-
-        <TextView
-            android:id="@+id/tv_content"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/shape_private_right"
-            android:textColor="#ffffff"
-            android:textSize="15sp" />
-    </LinearLayout>
+            android:layout_marginRight="7dp"
+            android:layout_toLeftOf="@id/iv_avatar"
+            android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_avatar"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true" />
-</RelativeLayout>
+            <ImageView
+                android:id="@+id/iv_warn"
+                android:layout_width="19dp"
+                android:layout_height="19dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="10dp"
+                android:src="@drawable/ic_warn_private_chat"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/tv_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/shape_private_right"
+                android:textColor="#ffffff"
+                android:textSize="15sp" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/iv_avatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentRight="true" />
+    </RelativeLayout>
+</LinearLayout>
