--- a/app/src/main/res/layout/dialog_personal_info.xml
+++ b/app/src/main/res/layout/dialog_personal_info.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -29,10 +29,10 @@
             android:id="@+id/relativeLayout2"
             android:layout_width="257dp"
             android:layout_height="245dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.505"
@@ -45,8 +45,8 @@
                 android:id="@+id/btn_personal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
                 android:layout_marginStart="7dp"
+                android:layout_marginLeft="7dp"
                 android:layout_marginTop="7dp"
                 android:background="@null"
                 android:src="@drawable/ic_personal"
@@ -57,8 +57,8 @@
                 android:id="@+id/btn_close"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginRight="7dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginRight="7dp"
                 android:background="@null"
                 android:src="@drawable/ic_close_per"
                 app:layout_constraintRight_toRightOf="parent"
@@ -68,8 +68,8 @@
                 android:id="@+id/iv_user_avatar"
                 android:layout_width="52dp"
                 android:layout_height="52dp"
-                android:layout_marginBottom="8dp"
                 android:layout_marginTop="33dp"
+                android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
@@ -81,11 +81,11 @@
                 android:id="@+id/tv_ranking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="32dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
                 android:background="@drawable/ic_ranking"
                 android:gravity="center"
                 android:maxEms="10"
@@ -151,8 +151,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="17dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
                 android:layout_marginTop="12dp"
+                android:layout_marginRight="10dp"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxEms="20"
@@ -275,12 +275,12 @@
                 android:id="@+id/btn_buy_royal"
                 android:layout_width="69dp"
                 android:layout_height="28dp"
-                android:layout_marginBottom="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="4dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginBottom="8dp"
                 android:background="@null"
                 android:src="@drawable/ic_buy_royal"
                 android:visibility="gone"
