--- a/app/src/main/res/anim/slide_out_bottom.xml
+++ b/app/src/main/res/anim/slide_out_bottom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <set xmlns:android="http://schemas.android.com/apk/res/android">
-    <alpha
-        android:duration="100"
-        android:fromAlpha="0"
-        android:toAlpha="1" />
+    <translate
+        android:duration="300"
+        android:fromYDelta="0%"
+        android:startOffset="0"
+        android:toYDelta="100%" />
 </set>
