--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -480,7 +480,7 @@
                         android:id="@+id/svga_gift"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:scaleType="fitCenter"
+                        android:scaleType="fitEnd"
                         app:autoPlay="true" />
 
 
