--- a/app/src/main/res/drawable/shape_online_royal_2.xml
+++ b/app/src/main/res/drawable/shape_online_royal_2.xml
@@ -2,7 +2,5 @@
 <shape android:shape="oval"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- 描边 -->
-    <stroke android:width="1dp" android:color="#FFD634"/>
-    <!-- 填充-->
-    <solid android:color="#FFD634"/>
+    <stroke android:width="1dp" android:color="#1effe4"/>
 </shape>
