--- a/app/src/main/res/layout/dialog_private_chat.xml
+++ b/app/src/main/res/layout/dialog_private_chat.xml
@@ -96,8 +96,7 @@
                     android:layout_height="22dp"
                     android:layout_marginRight="7dp"
                     android:background="@drawable/live_house_switch_to_key_board_icon"
-                    android:textColor="#b9b9b9"
-                    android:textSize="15sp" />
+                    android:visibility="gone" />
 
             </LinearLayout>
 
