--- a/app/src/main/res/layout/fragment_my_regal_level.xml
+++ b/app/src/main/res/layout/fragment_my_regal_level.xml
@@ -49,7 +49,7 @@
         <com.whzl.mengbi.ui.widget.view.MyLevelProgressLayout
             android:id="@+id/evl_user_level"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="12.5dp"
             android:layout_below="@id/tv_user_level"
             android:layout_marginTop="10dp" />
 
@@ -71,124 +71,124 @@
                 android:textColor="@color/tran_black2"
                 android:textSize="15sp" />
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content"
-               android:layout_below="@id/tv_how_update"
-               android:layout_marginTop="10dp"
-               android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_how_update"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-               <LinearLayout
-                   android:layout_width="0dp"
-                   android:layout_weight="1"
-                   android:layout_height="wrap_content"
-                   android:orientation="vertical"
-                   android:layout_marginLeft="10dp">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="送礼"
-                       android:textSize="13sp"
-                       android:textColor="@color/text_red"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="送礼"
+                        android:textColor="@color/text_red"
+                        android:textSize="13sp" />
 
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:textSize="13sp"
-                       android:textColor="@color/tran_black9"
-                       android:text="送的越多升级越快"/>
-               </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="送的越多升级越快"
+                        android:textColor="@color/tran_black9"
+                        android:textSize="13sp" />
+                </LinearLayout>
 
-               <LinearLayout
-                   android:layout_width="0dp"
-                   android:layout_weight="1"
-                   android:layout_height="wrap_content"
-                   android:orientation="vertical"
-                   android:layout_marginLeft="10dp">
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
 
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="购买道具物品"
-                       android:textSize="13sp"
-                       android:textColor="@color/text_red"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="购买道具物品"
+                        android:textColor="@color/text_red"
+                        android:textSize="13sp" />
 
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:textSize="13sp"
-                       android:textColor="@color/tran_black9"
-                       android:text="购买VIP、靓号，开通守护"/>
-               </LinearLayout>
-           </LinearLayout>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="购买VIP、靓号，开通守护"
+                        android:textColor="@color/tran_black9"
+                        android:textSize="13sp" />
+                </LinearLayout>
+            </LinearLayout>
         </RelativeLayout>
     </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@color/white">
+        android:background="@color/white"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:gravity="center_horizontal"
             android:text="等级特权"
             android:textColor="@color/tran_black2"
-            android:textSize="15sp"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="35dp"/>
+            android:textSize="15sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="18dp">
+            android:layout_marginTop="18dp"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/ic_regal_1"
+                android:drawablePadding="5dp"
+                android:gravity="center_horizontal"
                 android:text="等级标识"
-                android:textSize="11sp"
-                android:gravity="center_horizontal"
-                android:drawablePadding="5dp"
-                android:textColor="@color/tran_black2"/>
+                android:textColor="@color/tran_black2"
+                android:textSize="11sp" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/ic_regal_2"
-                android:text="敬请期待"
-                android:textSize="11sp"
-                android:gravity="center_horizontal"
                 android:drawablePadding="5dp"
-                android:textColor="@color/tran_black2"/>
+                android:gravity="center_horizontal"
+                android:text="敬请期待"
+                android:textColor="@color/tran_black2"
+                android:textSize="11sp" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/ic_regal_2"
-                android:text="敬请期待"
-                android:textSize="11sp"
-                android:gravity="center_horizontal"
                 android:drawablePadding="5dp"
-                android:textColor="@color/tran_black2"/>
+                android:gravity="center_horizontal"
+                android:text="敬请期待"
+                android:textColor="@color/tran_black2"
+                android:textSize="11sp" />
 
             <TextView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:drawableTop="@drawable/ic_regal_2"
-                android:text="敬请期待"
-                android:textSize="11sp"
-                android:gravity="center_horizontal"
                 android:drawablePadding="5dp"
-                android:textColor="@color/tran_black2"/>
+                android:gravity="center_horizontal"
+                android:text="敬请期待"
+                android:textColor="@color/tran_black2"
+                android:textSize="11sp" />
         </LinearLayout>
 
     </LinearLayout>
