--- a/app/src/main/res/layout/dialog_operate_more.xml
+++ b/app/src/main/res/layout/dialog_operate_more.xml
@@ -63,6 +63,7 @@
             android:textSize="14sp" />
 
         <View
+            android:id="@+id/view_manage"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#eeeeee" />
