--- a/app/src/main/res/layout/dialog_audience_info.xml
+++ b/app/src/main/res/layout/dialog_audience_info.xml
@@ -1,195 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="257dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_dialog_white"
+        tools:ignore="MissingConstraints">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="320dp"
+        <ImageView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="43dp"
-            android:layout_marginTop="25dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="3dp"
-            app:cardElevation="2dp">
+            android:src="@drawable/ic_visitor_info" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tv_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginBottom="7dp"
-                    android:layout_marginTop="41dp"
-                    android:textColor="@color/colorblack"
-                    android:textSize="17sp"
-                    android:textStyle="bold" />
-
-                <RelativeLayout
-                    android:id="@+id/rl_info_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/tv_name">
-
-                    <ImageView
-                        android:id="@+id/iv_level_icon"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:minHeight="10dp">
-
-                    </ImageView>
-
-                    <TextView
-                        android:id="@+id/tv_user_id"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/iv_level_icon"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="5.5dp"
-                        android:textColor="#b9b9b9"
-                        android:textSize="15sp"
-                        android:textStyle="bold" />
-
-                    <LinearLayout
-                        android:id="@+id/ll_age_container"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/tv_user_id"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/tv_age"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:drawableLeft="@drawable/user_age_icon"
-                            android:drawablePadding="14dp"
-                            android:textColor="#9c9c9c"
-                            android:textSize="13sp" />
-
-                        <View
-                            android:layout_width="0.5dp"
-                            android:layout_height="16dp"
-                            android:layout_marginLeft="17dp"
-                            android:background="#d2d2d2" />
-
-                        <TextView
-                            android:id="@+id/tv_location"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:layout_marginLeft="17dp"
-                            android:drawableLeft="@drawable/location_icon"
-                            android:drawablePadding="14dp"
-                            android:textColor="#9c9c9c"
-                            android:textSize="13sp" />
-
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tv_introduce"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@id/ll_age_container"
-                        android:layout_marginBottom="10dp"
-                        android:layout_marginLeft="20dp"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="10dp"
-                        android:gravity="center"
-                        android:hint="@string/no_motto_hint"
-                        android:maxLines="2"
-                        android:singleLine="true"
-                        android:textColor="#9e9e9e" />
-                </RelativeLayout>
-
-                <LinearLayout
-                    android:id="@+id/ll_option_container"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_below="@id/rl_info_container"
-                    android:orientation="horizontal"
-                    android:visibility="visible">
-
-                    <TextView
-                        android:id="@+id/tv_ban"
-                        style="@style/style_audience_info_option_text"
-                        android:text="@string/ban"
-                        android:textColor="#f76667"
-                        android:visibility="gone" />
-
-                    <View style="@style/audience_info_option_divider" />
-
-                    <TextView
-                        android:id="@+id/tv_kick_out"
-                        style="@style/style_audience_info_option_text"
-                        android:text="@string/kick_out"
-                        android:textColor="#e07434"
-                        android:visibility="gone" />
-
-                    <View style="@style/audience_info_option_divider" />
-
-                    <TextView
-                        android:id="@+id/tv_upgrade"
-                        style="@style/style_audience_info_option_text"
-                        android:text="@string/upgrade_room_manager"
-                        android:textColor="#a96aec"
-                        android:visibility="gone" />
-
-                    <View style="@style/audience_info_option_divider" />
-
-                    <TextView
-                        android:id="@+id/tv_private_chat"
-                        style="@style/style_audience_info_option_text"
-                        android:text="私聊"
-                        android:textColor="#337ec1"
-                        android:visibility="gone" />
-
-                </LinearLayout>
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_alignTop="@+id/ll_option_container"
-                    android:background="#d9d9d9" />
-
-                <ImageButton
-                    android:id="@+id/btn_dismiss"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:background="@null"
-                    android:padding="10.5dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/close_p" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
+        <ImageButton
+            android:id="@+id/btn_close"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="7dp"
+            android:background="@null"
+            android:src="@drawable/ic_close_visitor"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.whzl.mengbi.ui.widget.view.CircleImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="58dp"
-            android:layout_height="58dp"
-            android:layout_centerHorizontal="true"
-            android:elevation="2dp"
-            android:src="@drawable/empty_avatar"
-            app:civ_border_color="#b9b9b9"
-            app:civ_border_width="1dp" />
+            android:id="@+id/iv_user_avatar"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="52dp"
+            android:src="@drawable/ic_avatar_place"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    </RelativeLayout>
 
+        <TextView
+            android:id="@+id/tv_nick_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="11dp"
+            android:textColor="#000000"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_user_avatar" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tv_nick_name">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/tran_grey2" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="5dp"
+                android:orientation="horizontal">
+
+                <RelativeLayout
+                    android:id="@+id/rl_at"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <TextView
+                        android:id="@+id/tv_at"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="\@Ta"
+                        android:textColor="#70000000"
+                        android:textSize="12sp" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="7dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:background="@color/tran_grey2" />
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:visibility="invisible">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="私信"
+                        android:textColor="@color/tran_black2"
+                        android:textSize="14sp" />
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentRight="true"
+                        android:background="@color/tran_grey2" />
+                </RelativeLayout>
+
+
+                <RelativeLayout
+                    android:id="@+id/rl_more"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
+                    <View
+                        android:layout_width="1dp"
+                        android:layout_height="7dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:background="@color/tran_grey2" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_three_point" />
+                </RelativeLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </android.support.constraint.ConstraintLayout>
 </LinearLayout>
